Correct vertx-web build